Refactor Our Team section in index.html and update color scheme in style.css

--- a/index.html
+++ b/index.html
@@ -105,61 +105,65 @@
     </section>
 
     <!-- Section 4: Our Team (Page 11) -->
-    <section id="our-team" class="page-section white-bg">
-        <div class="section-content team-content">
-            <div class="logo-container-alt">
-                <!-- Placeholder for ExoWorks Logo -->
-                <img src="images/exoworks_logo.png" alt="ExoWorks Logo" class="logo">
+<section id="our-team" class="page-section white-bg">
+    <div class="section-content team-content">
+      <div class="logo-container-alt">
+        <!-- Placeholder for ExoWorks Logo -->
+        <img src="images/exoworks_logo.png" alt="ExoWorks Logo" class="logo">
+      </div>
+  
+      
+      <div class="team-inner-content">
+        <h1>Our Team</h1>
+        <div class="team-layout-container">
+          <div class="team-text-column">
+            <p>ExoWorks' proven team is driving one of the world's fastest growing AI startups, with the experience and talent to grow and manage global operations.</p>
+            <p>Behind its seasoned management, ExoWorks has a team of top engineers and subject matter experts, and a pipeline of known hires for the coming year.</p>
+          </div>
+          <div class="team-photos-column">
+            <div class="team-member">
+              <img src="images/salim_ismail.png" alt="Salim Ismail">
+              <p>Salim Ismail</p>
             </div>
-            <h1>Our Team</h1>
-            <div class="team-layout-container">
-                <div class="team-text-column">
-                    <p>ExoWorks' proven team is driving one of the world's fastest growing AI startups, with the experience and talent to grow and manage global operations.</p>
-                    <p>Behind its seasoned management, ExoWorks has a team of top engineers and subject matter experts, and a pipeline of known hires for the coming year.</p>
-                </div>
-                <div class="team-photos-column">
-                    <div class="team-member">
-                        <img src="images/salim_ismail.png" alt="Salim Ismail">
-                        <p>Salim Ismail</p>
-                    </div>
-                    <div class="team-member">
-                        <img src="images/eric_pulier.png" alt="Eric Pulier">
-                        <p>Eric Pulier</p>
-                    </div>
-                    <div class="team-member">
-                        <img src="images/greg_pulier.png" alt="Greg Pulier">
-                        <p>Greg Pulier</p>
-                    </div>
-                </div>
-                <div class="team-roles-column">
-                    <div class="roles-list">
-                        <h2>Already On Board:</h2>
-                        <ul>
-                            <li>Chief Architect</li>
-                            <li>Onshore and offshore engineering teams</li>
-                            <li>AI experts</li>
-                            <li>Project Management</li>
-                            <li>Product Management</li>
-                            <li>Support Leads</li>
-                            <li>Business Development</li>
-                            <li>Sales</li>
-                        </ul>
-                    </div>
-                    <div class="roles-list">
-                        <h2>Identified for onboarding:</h2>
-                        <ul>
-                            <li>Engineering expansion</li>
-                            <li>Sales expansion</li>
-                            <li>Dev/Ops & Security</li>
-                            <li>General Counsel</li>
-                            <li>Account Management</li>
-                            <li>Partner Management</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="team-member">
+              <img src="images/eric_pulier.png" alt="Eric Pulier">
+              <p>Eric Pulier</p>
             </div>
+            <div class="team-member">
+              <img src="images/greg_pulier.png" alt="Greg Pulier">
+              <p>Greg Pulier</p>
+            </div>
+          </div>
+          <div class="team-roles-column">
+            <div class="roles-list">
+              <h2>Already On Board:</h2>
+              <ul>
+                <li>Chief Architect</li>
+                <li>Onshore and offshore engineering teams</li>
+                <li>AI experts</li>
+                <li>Project Management</li>
+                <li>Product Management</li>
+                <li>Support Leads</li>
+                <li>Business Development</li>
+                <li>Sales</li>
+              </ul>
+            </div>
+            <div class="roles-list">
+              <h2>Identified for onboarding:</h2>
+              <ul>
+                <li>Engineering expansion</li>
+                <li>Sales expansion</li>
+                <li>Dev/Ops & Security</li>
+                <li>General Counsel</li>
+                <li>Account Management</li>
+                <li>Partner Management</li>
+              </ul>
+            </div>
+          </div>
         </div>
-    </section>
+      </div> 
+    </div>
+  </section>
 
 </body>
 </html> 
